<resources>
    <string name="app_name">Swoosh</string>
    <string name="desired_league">Desired league:</string>
    <string name="mens_string">Mens</string>
    <string name="womens_string">Womens</string>
    <string name="todo_string">TODO</string>
    <string name="co_ed_string">Co-Ed</string>
    <string name="next_string">NEXT</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="todo">TODO</string>
    <string name="search_league">Looking for a co-ed league near you...</string>


</resources>
