<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeagueActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo_string"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/desiredleaguebg" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="88dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo_string"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/swooshlogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/desired_league"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/swoosh_toggle"
            android:text="@string/mens_string"
            android:textColor="@android:color/background_light"
            android:textOff="@string/mens_string"
            android:textOn="@string/mens_string"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="219dp" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/swoosh_toggle"
            android:text="@string/womens_string"
            android:textColor="@android:color/background_light"
            android:textOff="@string/womens_string"
            android:textOn="@string/womens_string" />

        <ToggleButton
            android:id="@+id/toggleButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/swoosh_toggle"
            android:text="@string/co_ed_string"
            android:textColor="@android:color/background_light"
            android:textOff="@string/co_ed_string"
            android:textOn="@string/co_ed_string" />
    </LinearLayout>

    <Button
        android:id="@+id/leagueNextBn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/swoosh_button"
        android:fontFamily="@font/montserrat"
        android:onClick="leagueNextClicked"
        android:text="@string/next_string"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>